# radio-cartographer

./: .dockerignore  .gitignore  0144757_processed.fits  0144759_processed_fixedvalues.fits  0144759_processed_ours.fits  0144759_processed_ours_sum.fits  0144759_processed_ourvalues.fits  Analysis.cpp  Analysis.h  BackgroundCUDA.cpp  CMakeLists.txt  Cartographer.cpp  Cartographer.h  Debugger.cpp  Debugger.h  Dockerfile  FileReader.cpp  FileReader.h  FitsParser.cpp  FitsParser.h  FourtyParser.cpp  FourtyParser.h  FunctionalForm.cpp  FunctionalForm.h  GBParser.cpp  GBParser.h  Input.cpp  Input.h  Map.cpp  Map.h  Output.txt  OutputFile.cpp  Pixel.cpp  PreProcessor.cpp  PreProcessor.h  Processor.cpp  Processor.h  ProcessorRFI.cpp  ProcessorRFI.h  ProcessorTS.cpp  (+25 more)
cmake/: radio_cartographer-config.cmake.in
include/: BackgroundCUDA.h  Composite.h  GBParser.h  Map.h  OutputFile.h  Processor.h  Structures.h  Survey.h  Tools.h
legacy_backup/: compileStandard.sh  run.sh  run1.sh  run2.sh  run_single.sh
pyrc/: README.md  requirements.txt
pyrc/examples/: run_config.toml  run_example.py  run_iter_example.py
pyrc/pyrc/: __init__.py  gain_calibration.py  gain_calibration_validation.py  parameters.py  runner.py  utils.py
radio_cartographer/: README.md
radio_cartographer/config/: config.json  example.json
radio_cartographer/include/: Analysis.h  FileReader.h  FourtyParser.h  GBTParser.h  HighResInput.h  PreProcessor.h  PreProcessorNew.h  Scan.h  Structures.h  Survey.h  Tools.h
radio_cartographer/include/io/: Observation.h
radio_cartographer/include/io/config/: ConfigParser.h  ConfigParserTemplate.h  JsonConfigParser.h
radio_cartographer/include/io/observation/: FileReader.h  FortyFootParser.h  HundredMeterParser.h  LegacyTwentyParser.h  TwentyMeterParser.h
radio_cartographer/include/map/: Cartographer.h  Composite.h  Pixel.h
radio_cartographer/include/photometry/: photometry.h
radio_cartographer/include/processor/: BackgroundCUDA.h  Processor.h  ProcessorTS.h
radio_cartographer/include/utils/: FunctionalForm.h  RCR.h  Structures.h  Tools.h
radio_cartographer/resources/: test.toml
radio_cartographer/src/: Analysis.cpp  BackgroundCUDA.cpp  FileReader.cpp  FitsParser.cpp  GBParser.cpp  GBTParser.cpp  OutputFile.cpp  PreProcessor.cpp  PreProcessorNew.cpp  Processor.cpp  RCR.cpp  Scan.cpp  Source.cpp  Survey.cpp  Tools.cpp
radio_cartographer/src/io/: Observation.cpp  OutputFile.cpp
radio_cartographer/src/io/config/: ConfigParser.cpp  JsonConfigParser.cpp
radio_cartographer/src/io/observation/: FileReader.cpp  FortyFootParser.cpp  HundredMeterParser.cpp  LegacyTwentyParser.cpp  TwentyMeterParser.cpp
radio_cartographer/src/map/: Cartographer.cpp  Composite.cpp  Map.cpp  Pixel.cpp
radio_cartographer/src/photometry/: Photometry.cpp
radio_cartographer/src/processor/: BackgroundCUDA.cpp  Processor.cpp  ProcessorRFI.cpp  ProcessorTS.cpp  ProcessorThetaGap.cpp
radio_cartographer/src/utils/: FunctionalForm.cpp  NonParametric.cpp  Tools.cpp
src/: Analysis.cpp  BackgroundCUDA.cpp  Cartographer.cpp  Composite.cpp  Map.cpp  OutputFile.cpp  PreProcessor.cpp  Processor.cpp  ProcessorTS.cpp  ProcessorThetaGap.cpp  RCR.cpp  Source.cpp  Survey.cpp  Tools.cpp
testing/: Skynet_58570_CRAB_38560_45388.cyb.fits.txt  Skynet_59751_CRAB_81338_30116.A.cal_YY0_img.fits
testing/profile/: c_profiler.py  profile_example.py
testing/scripts/: input.py  output.py  reproduce_skip.py
testing/txt files used for testing appending/: 40872_oj287_jul_24_1700_phot_2.txt  40873_oj287_jul_24_1800_phot.txt
